# annoyme

./: .cproject  .gitignore  .project  AOutput.cpp  AOutputSimple.h  AUTHORS.txt  AlsaOuput.cpp  AlsaOuput.h  AlsaOutput.cpp  AlsaOutput.h  Annoyme.cpp  Annoyme.h  AnnoymeConfiguration.cpp  AnnoymeConfiguration.h  BasicConfiguration.cpp  BasicConfiguration.h  CMakeLists.txt  ConfigTools.h  Configuration.cpp  Configuration.h  Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  FileConfiguration.cpp  FileConfiguration.h  HandlerSoundOutput.h  InputEvent.cpp  InputEvent.h  InputEventHandler.h  InputEventReader.h  InputEventReaderFactory.cpp  InputEventReaderFactory.h  LICENSE.txt  Makefile  MixedAlsaOutput.cpp  MixedAlsaOutput.h  MixedOutput.cpp  MixedOutput.h  MixerOutput.cpp  (+36 more)
cmake/: build_annoyme.cmake  build_annoyme.txt  build_monitor_printer.cmake  check_dependencies.cmake  check_dependencies.txt  install.cmake  install.txt  main.cmake  main.txt  package.cmake  package.txt  select_audio.cmake  select_audio.txt  select_key_input.cmake  select_key_input.txt  test.cmake  write_configuration.cmake  write_configuration.txt
cmake/Modules/: FindALSA.cmake  FindAO.cmake  FindCppUnit.cmake  FindXCB-XEVIE.cmake  FindXEVIE.cmake  FindYAMLCPP.cmake
config/: AggregateConfiguration.cpp  AggregateConfiguration.h  AnnoymeConfiguration.cpp  AnnoymeConfiguration.h  BasicConfiguration.cpp  BasicConfiguration.h  Configuration.h  ConfigurationMap.cpp  ConfigurationMap.h  FileConfiguration.h  SystemConfiguration.cpp  SystemConfiguration.h  SystemConfigurationLinux.cpp  SystemConfigurationLinux.h  YAMLConfig.cpp  YAMLConfig.h
doc/: annoyme.xmi
doc/eclipse/: formatter.xml
pcm/default/: enterPressed.raw
resources/: config.yaml  default_config.yaml
resources_src/alien/: source.txt
resources_src/morse/: morse.wav.bz2
resources_src/war/: 17130__NoiseCollector__ak47_chamber_round.wav.bz2  52593__Michel_Hollicardo__gun_shoot.wav.bz2  64346_Robinhood76_00672_gunshot_1.wav.bz2
resources_src/weak/: 75188__fastson__typewriter_slow.wav.bz2  source.txt
samples/default/: backspacePressed.raw  normalKeyPressed.raw
scripts/: package-source.sh
src/: AOutput.cpp  AOutput.h  AOutputSimple.cpp  AlsaOutput.cpp  Annoyme.cpp  Annoyme.h  CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  FileUtil.cpp  FileUtil.h  HandlerSoundOutput.cpp  InputEventReaderFactory.cpp  MacInput.cpp  MacInput.h  MixedOutput.cpp  MixerOutput.h  ResourceLoader.cpp  ResourceLoader.h  STLHelpers.h  SimpleWaveFileLoader.cpp  SimpleWaveFileLoader.h  SoundLoader.h  SoundLoaderFactory.cpp  SoundLoaderFactory.h  SoundOutput.h  SoundOutputFactory.cpp  XKeyMapInput.cpp  XKeyMapInput.h  XevieInput.cpp  XevieInput.h  annoyme-run.cpp  config.h.in  exceptions.h  stdutil.h  test_runner.cpp
src/util/: FileUtil.cpp  (+4 more)
test/: Transformtest.cpp  example  example.c  keysymtest.cpp  klick-back.aup  klick.aup  querykeymap-spike.cpp  querykeymap-spike.sh  soundcheck  soundcheck.c  soundcheck.cpp  soundcheck_static.c  xevidemo  xevidemo.c
(+66 files in other folders)
